@@ -2,12 +2,19 @@
   $error => ''
 </%args>
 <%init>
+my $title = __('Activation Required');
+my $trial = EBox::Global->edition() eq 'trial-expired';
+if ($trial) {
+    $title .= ' (' . __('Trial Expired') . ')';
+}
 use EBox::Gettext;
+my $msg = $trial ? __x('Please contact {href} if you still do not have a license key.', href => '<a href="mailto:sales@zentyal.com" style="color:#69be28;">sales@zentyal.com</a>') :
+                   __x('You can get one by requesting a free 30-day trial at {href}', href => '<a href="http://zentyal.com/trial">http://zentyal.com/trial</a>');
 </%init>
 <div id="activation-required">
     <header>
         <img src="/data/images/title-login.png"></img>
-        <h1><% __('Activation Required') %></h1>
+        <h1><% $title %></h1>
     </header>
 % if ($error) {
     <div id="error"><% $error %></div>
@@ -15,8 +22,8 @@ use EBox::Gettext;
     <form>
     <h3><% __('Please enter your license key') %></h3>
     <center>
-        <input id="key" class="inputText" size="24" name="key" type="text">
-        <h3><% __x('You can get one by requesting a free 30-day trial at {href}', href => '<a href="http://zentyal.com/trial">http://zentyal.com/trial</a>') %></h3>
+        <input id="key" class="inputText" size="25" name="key" type="text">
+        <h3><% $msg %></h3>
         <br>
         <input class="btn btn-green btn-big btn-block" id="validate" type="submit" value="<% __('Validate License') %>">
     </center>
