@@ -1,4 +1,5 @@
 5.1
+	+ Services stop working and activation is required after trial expired
 	+ Allow up to 12 dashboard widgets per section instead of 4
 	+ Rename l2tp package icon to ipsec
 	+ Forbid creation of local administrator user if exists in samba
